Fixed bug in the viewer framework which caused the page height to change when too much content was displayed in the content page. The content part of all pages have now been changed to be enclosed by a "div" tag which has overflow set to "auto" to make the browser create a scrollbar rather than changing the page height.
Fixed bug when creating a new account after having topped up an account which caused the back-end to transform the XML Document into XHTML using the specified XSL Viewer even when the page was accessed through a web browser.

git-svn-id: svn://svn.cellpointmobile.com/mpoint/server/trunk@94 86c063f6-31ef-4d33-b9ba-d2d3e4924f03

--- a/webroot/css/global.css
+++ b/webroot/css/global.css
@@ -258,11 +258,12 @@ td#provider
 	vertical-align: bottom;
 	padding-right: 30px;
 }
-td#content
+div#content
 {
 	width: 800px;
 	height: 365px;
 	vertical-align: top;
+	overflow: auto;
 }
 
 div#messages
